Fix dynamic shaders for support of pre-defined visibility and for support of preserving user changes from HTML¨ controls.

--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@
 
 .shader-part-name {
     font-weight: 600;
-    margin: 0 0 2px 12px;
+    margin-top: 2px;
 }
 
 
